--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
         </nav>
         <!-- Progress Bar-->
         <div class="progress progress-container" role="progressbar">
-            <div class="progress-bar bg-primary" id="myBar"></div>
+            <div class="progress-bar" id="myBar"></div>
         </div>
     </div>
 
     <!-- Masthead-->
-    <header class="masthead bg-primary text-white text-center">
+    <header class="masthead text-white text-center">
         <div class="container d-flex align-items-center flex-column">
             <!-- Masthead Avatar Image-->
             <img src="assets/img/avatar.jpg" class="masthead-avatar rounded-circle img-fluid mb-5"
@@ -122,7 +122,7 @@
         </div>
     </section>
     <!-- Education Section-->
-    <section class="page-section bg-primary text-white mb-0" id="education">
+    <section class="page-section text-white mb-0" id="education">
         <div class="container">
             <!-- Education Section Heading-->
             <h2 class="page-section-heading text-center text-uppercase text-white">Educación</h2>
@@ -228,7 +228,7 @@
                     <h4 class="text-uppercase mb-4">Proyectos</h4>
                     <p class="lead mb-0">
                         Puedes revisar los proyectos en los que he trabajado
-                        <a href="http://github.com/CarlosJPantoja">aquí</a>.
+                        <a class="link" href="http://github.com/CarlosJPantoja">aquí</a>.
                     </p>
                 </div>
             </div>
@@ -263,7 +263,7 @@
                                 <!-- Experience Modal - Text-->
                                 <p class="mb-4">React (también llamada React.js o ReactJS) es una biblioteca Javascript de código abierto diseñada para crear interfaces de usuario con el objetivo de facilitar el desarrollo de aplicaciones en una sola página. Es mantenido por Facebook y la comunidad de software libre. En el proyecto hay más de mil desarrolladores libres.
                                 </p>
-                                <button class="btn btn-primary" data-bs-dismiss="modal">
+                                <button class="btn text-white" data-bs-dismiss="modal">
                                     <i class="fas fa-xmark fa-fw"></i>
                                     Cerrar ventana
                                 </button>
@@ -298,7 +298,7 @@
                                 <!-- Experience Modal - Text-->
                                 <p class="mb-4">Python es un lenguaje de alto nivel de programación interpretado cuya filosofía hace hincapié en la legibilidad de su código, se utiliza para desarrollar aplicaciones de todo tipo, ejemplos: Instagram, Netflix, Spotify, Panda3D, entre otros. Se trata de un lenguaje de programación multiparadigma, ya que soporta parcialmente la orientación a objetos, programación imperativa y, en menor medida[¿cuál?], programación funcional. Es un lenguaje interpretado, dinámico y multiplataforma.
                                 </p>
-                                <button class="btn btn-primary" data-bs-dismiss="modal">
+                                <button class="btn text-white" data-bs-dismiss="modal">
                                     <i class="fas fa-xmark fa-fw"></i>
                                     Cerrar ventana
                                 </button>
@@ -333,7 +333,7 @@
                                 <!-- Experience Modal - Text-->
                                 <p class="mb-4">Spring es un framework para el desarrollo de aplicaciones y contenedor de inversión de control, de código abierto para la plataforma Java.
                                 </p>
-                                <button class="btn btn-primary" data-bs-dismiss="modal">
+                                <button class="btn text-white" data-bs-dismiss="modal">
                                     <i class="fas fa-xmark fa-fw"></i>
                                     Cerrar ventana
                                 </button>
