--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase" id="mainNav">
             <div class="container">
                 <a class="navbar-brand" href="#page-top">Carlos J. Pantoja</a>
-                <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded"
+                <button class="navbar-toggler text-uppercase fw-bold text-white rounded"
                     type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                     aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
